--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/amazon_selenium_testing
+    working_directory: ~/
 
     steps:
       - checkout
@@ -48,8 +48,11 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python features/testAllFeatures.py
+            python features/test_product_page_feature.py
 
       - store_artifacts:
           path: test-reports
           destination: test-reports
+
+      - store_test_results:
+          path: test_results
