Updated config for test artifacts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
 
       - store_artifacts:
           path: test-reports
-          destination: test-reports
+          destination: test-results
 
       - store_test_results:
           path: test-results
