Refactored run tests command to behave

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            python features/test_product_page_feature.py
+            python behave
 
       - store_artifacts:
           path: test-reports
