--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
 
     steps:
       - checkout
-      - run: mkdir test-results
+      #- run: mkdir test-results
 
       # Download and cache dependencies
       - restore_cache:
