Added ini config for behave to output junit to folder

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            behave --junit-directory reports/amazon_selenium_testing/
+            behave
 
       - store_artifacts:
           path: test-reports
